font size for header entry

--- a/wp-content/themes/ryanlooper/css/custom.css
+++ b/wp-content/themes/ryanlooper/css/custom.css
@@ -582,8 +582,8 @@ h1 {
 }
 
 h3 {
-    font-family: "Edmondsans Bold";
-    font-size: 20pt;
+    font-family: "Edmondsans";
+    font-size: 22px;
     color: #C8D737;
 }
 
